# mikroprozessortechnik

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  README.md  launch.json  main.c  ti-arm-toolchain.cmake  tm4c1294ncpdt_startup_ccs.c  workspace.theia-workspace
.launches/: _SensorArray_4x8_TDK_TAS2143.launch  _TM4C123GXL_SPI_ADC.launch  _TM4C123GXL_SPI_ADC2.launch  _TM4C1294_EK_SPI_ADC.launch  ccs-project-0-win.launch
Debug/: ccs-project-0-win.map  ccs-project-0-win_linkInfo.xml  ccsObjs.opt  makefile  sources.mk  subdir_rules.mk
Debug/.clangd/: compile_commands.json
Debug/.clangd/.cache/clangd/index/: Aufgabe 1a.c.0362183357A6235C.idx  Aufgabe 1b.c.B79A136D5B766ED1.idx  Aufgabe 1c.c.95BEE1595E3B6EDB.idx  Aufgabe 3 Alternative.c.1560AE56BE0727C8.idx  Aufgabe 3.c.8E2ED92F06A37039.idx  _limits.h.1CD84D4246A7D389.idx  _stdint.h.804111B3B8724946.idx  _stdint.h.A6ED26414C981577.idx  _stdint40.h.295D39279B7345DD.idx  _ti_config.h.48005C5FB99E5BC8.idx  _types.h.2192262CEA4EC84C.idx  _types.h.393BC790B5D9F1F8.idx  aufgabe_3_Final_v2.c.1C397FED1696652A.idx  aufgaben.h.C8758473D86BA5DA.idx  cdefs.h.D5C204DCD54C5736.idx  debugging.c.9D17A9EB011F5ACA.idx  labor_aufgabe_4.c.4B86447A0CC8BCF6.idx  linkage.h.60C9CF3F8DA79963.idx  main.c.18EF10C2ADF0CABE.idx  run_aufgabe_4.c.567926693B69C904.idx  stdarg.h.CFE1792ABA62315D.idx  stdint.h.1B62CBDCC85BDFB1.idx  stdint.h.B7D84EB6C96D42C9.idx  stdio.h.C1AB9A8852121EF5.idx  tm4c1294ncpdt.h.E0DDEE8D2D6E44BA.idx  tm4c1294ncpdt_startup_ccs.c.48A16FEC6CFBD391.idx
Debug/src/: subdir_rules.mk  subdir_vars.mk
src/: Aufgabe 1a.c  Aufgabe 1b.c  Aufgabe 1c.c  Aufgabe 3 Alternative.c  Aufgabe 3.c  aufgabe_3.c  aufgabe_3_Final_v2.c  aufgabe_4.c  aufgabe_4_optional.c  aufgaben.h  debugging.c  labor_aufgabe_4.c  run_aufgabe_4.c  task_switcher.c  task_switcher.h
